src/index.css
@import "https://fonts.googleapis.com/css2?family=Lato&family=Lora&display=swap";
:root {
  --grey: #191919;
  --lightgrey: #34495e;
  --black: #000;
  --orange: #ff9800;
  --white: #fff;
  --blue: #1976D2; }

html {
  scroll-behavior: smooth; }

body {
  margin: 0;
  font-family: "Lato", sans-serif;
  background-color: var(--grey);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

code {
  font-family: "Lato", sans-serif; }

p {
  margin-top: 0; }

h1 {
  font-family: "Lora", serif;
  font-weight: 100;
  color: white;
  text-align: center;
  padding-bottom: 10px; }


h2 {
  font-family: "Roboto","Helvetica","Arial",sans-serif;
color: var(--white) }

h3 {
  font-family: "Roboto","Helvetica","Arial",sans-serif;
 }

h4 {
  font-family:"Roboto","Helvetica","Arial",sans-serif }

h5 {
  font-family: "Roboto","Helvetica","Arial",sans-serif }

h6 {
  font-family: "Roboto","Helvetica","Arial",sans-serif }

.socialMediaLink {
  padding: 2px;
  color: var(--white);
  margin: 0 4px; }

#jumbotron h3 {
  color: var(--white); }

.circularImage {
  height: 160px;
  width: 160px;
  border-radius: 80px;
  margin-bottom: 12px;
  -webkit-border-radius: 170px;
  -moz-border-radius: 170px; }

.gridItem p, .gridItem h4  {
  color: var(--white);
}

#appBar {
  position: absolute;
  z-index: 999;
  top: 0;
  left: 0;
  background-color: var(--blue);
  box-shadow: none !important; }
  #appBar .navLink {
    color: var(--white);
    text-decoration: none; }
  #appBar .appBarLogo {
    height: 60px; }
    #appBar .digitalClock {
      margin-right: 8px !important;
    }

    .navLink {
      color: var(--white);
      text-decoration: none; }

.MuiMenu-list {
  color: var(--white);
  background-color: var(--blue); }

.dice {
  margin-bottom: 24px !important;
  text-align: center;
}

.skillRatings {
  text-align: center;
}

#jumbotronAnimation {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  padding-top: 2px;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center; }

#resume {
  background: var(--blue); }
  #resume h2 {
    color: var(--white); }
  #resume button {
    width: 100%;
    color: var(--white);
    background: var(--orange);
    margin: 14px 0;
    height: 36px; }

.submitButton {
  margin-top: 12px !important;
  width: 100%; }

#projects {
  color: var(--white);
  margin-bottom: 48px; }
  #projects .MuiCard-root {
    margin: auto; }
  #projects h4 {
    margin: 24px 0;
    text-align: center;
    color: var(--white); }

#aboutMe h4, #movieDice h4, #chessGame h4 {
  margin: 24px 0;
  text-align: center;
  color: var(--white); }

  .subtitle {
    text-align: center;
  color: var(--white);
  }

#skills h4 {
  margin: 24px 0;
  text-align: center;
  color: var(--white); }

#skills .MuiGrid-item {
  margin-bottom: 24px; }

#skills h5 {
  color: var(--white);
  font-size: 16px;
  margin: 12px 0; }

form {
  max-width: 500px;
  margin: 0 auto; }

.form {
  background: #0e101c;
  max-width: 400px;
  margin: 0 auto; }

input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  border: 1px solid white;
  padding: 10px 15px;
  margin-bottom: 10px;
  font-size: 14px; }
  input:disabled {
    opacity: 0.4; }

label {
  line-height: 2;
  text-align: left;
  display: block;
  margin-bottom: 6px;
  color: white;
  font-size: 14px;
  font-weight: 200; }

input[type="button"]:hover {
  transition: 0.3s all; }

.imageWrapper {
  height: 200px;
  width: 200px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  border: var(--white) solid 2px;
  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4); }

.ratingLabel {
  color: var(--white); }

#footer {
  padding: 36px 12px;
  background: var(--black);
  color: var(--white); }

  #notfound {
    position: relative;
    height: 100vh;
    background: #030005;
  }
  
  #notfound .notfound {
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
  }
  
  .notfound {
    max-width: 767px;
    width: 100%;
    line-height: 1.4;
    text-align: center;
  }
  
  .notfound .notfound-404 {
    position: relative;
    height: 180px;
    margin-bottom: 20px;
    z-index: -1;
  }

  .movieRating {
    margin-bottom: 20px;
  }
  
  .notfound .notfound-404 h1 {
    font-family: 'Montserrat', sans-serif;
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50% , -50%);
        -ms-transform: translate(-50% , -50%);
            transform: translate(-50% , -50%);
    font-size: 224px;
    font-weight: 900;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: -12px;
    color: #030005;
    text-transform: uppercase;
    text-shadow: -1px -1px 0px #8400ff, 1px 1px 0px #ff005a;
    letter-spacing: -20px;
  }
  
  
  .notfound .notfound-404 h2 {
    font-family: 'Montserrat', sans-serif;
    position: absolute;
    left: 0;
    right: 0;
    top: 110px;
    font-size: 42px;
    font-weight: 700;
    color: #fff;
    text-transform: uppercase;
    text-shadow: 0px 2px 0px #8400ff;
    letter-spacing: 13px;
    margin: 0;
  }
  
  .notfound a {
    font-family: 'Montserrat', sans-serif;
    display: inline-block;
    text-transform: uppercase;
    color: #ff005a;
    text-decoration: none;
    border: 2px solid;
    background: transparent;
    padding: 10px 40px;
    font-size: 14px;
    font-weight: 700;
    -webkit-transition: 0.2s all;
    transition: 0.2s all;
  }
  
  .notfound a:hover {
    color: #8400ff;
  }

  #aboutMe p, #movieDice p, #chessGame p, #skills p{  
    line-height: 1.8rem;
  }
  
  @media only screen and (max-width: 900px) {
    #aboutMe p, #movieDice .subtitle, #chessGame p, #skills p{  
      text-align: center !important;
    }
  }
  @media only screen and (max-width: 600px) {
    .notfound .notfound-404 h2 {
      font-size: 24px;
    }

    #chessBoard {
      width: 300px;
    }
  }
  
  
  @media only screen and (max-width: 480px) {
    .notfound .notfound-404 h1 {
        font-size: 182px;
    }

  }  

/*** iPhone and iOS Form Input Zoom Fixes ***/
/* Fix Input Zoom on devices older than iPhone 5: */
@media screen and (device-aspect-ratio: 2 / 3) {
  select, textarea, input[type="text"], input[type="password"],
  input[type="datetime"], input[type="datetime-local"],
  input[type="date"], input[type="month"], input[type="time"],
  input[type="week"], input[type="number"], input[type="email"],
  input[type="url"] {
    font-size: 16px; } }

/* Fix Input Zoom on iPhone 5, 5C, 5S, iPod Touch 5g */
@media screen and (device-aspect-ratio: 40 / 71) {
  select, textarea, input[type="text"], input[type="password"],
  input[type="datetime"], input[type="datetime-local"],
  input[type="date"], input[type="month"], input[type="time"],
  input[type="week"], input[type="number"], input[type="email"],
  input[type="url"] {
    font-size: 16px; } }

/* Fix Input Zoom on iPhone 6, iPhone 6s, iPhone 7  */
@media screen and (device-aspect-ratio: 375 / 667) {
  select, textarea, input[type="text"], input[type="password"],
  input[type="datetime"], input[type="datetime-local"],
  input[type="date"], input[type="month"], input[type="time"],
  input[type="week"], input[type="number"], input[type="email"],
  input[type="tel"], input[type="url"] {
    font-size: 16px; } }

/* Fix Input Zoom on iPhone 6 Plus, iPhone 6s Plus, iPhone 7 Plus, iPhone 8, iPhone X, XS, XS Max  */
@media screen and (device-aspect-ratio: 9 / 16) {
  select, textarea, input[type="text"], input[type="password"],
  input[type="datetime"], input[type="datetime-local"],
  input[type="date"], input[type="month"], input[type="time"],
  input[type="week"], input[type="number"], input[type="email"],
  input[type="tel"], input[type="url"] {
    font-size: 16px; } }

